# databricks-release-updates-diggibyte

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: weekly.yml
data/docs/: 01d27d04a8b3afa8.md  065b7d9454c886f4.md  07b12ca971418d1f.md  0cbed209473e3dca.md  0fddc2265639e7b2.md  10bfc42df151e7e8.md  11aa107aecf90bbd.md  127395041725f31d.md  152ee1e5d40ab6b4.md  15e81cea414b2226.md  1639593c51f67bcf.md  19648d800ed2195b.md  1efeec49ad8e7ab8.md  1febb4713e50249a.md  1ffd34d7ddfce5b5.md  2162a447bd51f2e6.md  22770f97f7470656.md  239c818ccb295ec7.md  24cc66e5a617fd3f.md  25daefe532eebba9.md  267690362226503e.md  27874e6aa037a51e.md  27c50246e4cb13e8.md  304db929d3bd7647.md  342910a5b455582d.md  375d57ba4008211b.md  378dbef8397a5df3.md  39459533a12711f7.md  3e940c16a01ec8ba.md  3f7a41798ac8a31a.md  4172c911582aee9d.md  43c742462d600066.md  44aa55de363b6e58.md  45c2fd07815a813a.md  4704f7f7fe8c4e42.md  48fd4a65b072e776.md  491cd99c0fee21d4.md  4aa36f75bcce43be.md  4d73d8e9473caf4c.md  4fdd164e5b12964a.md  (+69 more)
data/onepagers/: 2025-03-20-genie-agent-formerly-genie-space-redesign-and-permission-management.json  2025-06-11-dlt-is-now-spark-declarative-pipelines-on-lakeflow.json  2025-06-23-f9303d1e.json  2025-07-24-d1eb3a9d.json  2025-08-14-21a0396e.json  2025-08-25-eb903d43.json  2025-08-28-9a3d5e83.json  (+176 more)
fixtures/: lakeflow-connect-row-filtering.md  lakeflow-declarative-pipelines.md  sql-materialized-views.md  unity-catalog-abac.md
site/: index.html
templates/: gallery.html.j2  onepager.html.j2
tests/: test_pipeline.py
(+422 files in other folders)
